# ChangeLog for www-client/opera
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.552 2010/10/11 10:37:37 jer Exp $

*opera-10.70_pre9067 (11 Oct 2010)

  11 Oct 2010; Jeroen Roovers <jer@gentoo.org> -opera-10.70_pre9047.ebuild,
  -opera-10.70_pre9050.ebuild, +opera-10.70_pre9067.ebuild:
  http://my.opera.com/desktopteam/blog/2010/10/11/websockets

*opera-10.63_pre6450 (08 Oct 2010)

  08 Oct 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.63_pre6450.ebuild:
  http://my.opera.com/desktopteam/blog/2010/10/08/opera-10-63-release-candid
  ate-2

*opera-10.63_pre6447 (05 Oct 2010)

  05 Oct 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.63_pre6447.ebuild:
  http://my.opera.com/desktopteam/blog/2010/10/05/opera-10-63-release-candid
  ate

*opera-10.70_pre9053 (27 Sep 2010)

  27 Sep 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.70_pre9053.ebuild:
  http://my.opera.com/desktopteam/blog/2010/09/27/hash-tag-operawesome

*opera-10.70_pre9050 (22 Sep 2010)

  22 Sep 2010; Jeroen Roovers <jer@gentoo.org> -opera-10.70_pre9046.ebuild,
  -opera-10.70_pre9048.ebuild, -opera-10.70_pre9049.ebuild,
  +opera-10.70_pre9050.ebuild:
  <http://my.opera.com/desktopteam/blog/2010/09/22/startup-and-shutdown-prof
  iling>. Remove old except _pre9047 because it is not affected by the paste
  bug - do not upgrade to 9050 unless you never paste in text fields using
  the tertiary button.

*opera-10.70_pre9049 (17 Sep 2010)

  17 Sep 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.70_pre9049.ebuild:
  http://my.opera.com/desktopteam/blog/2010/09/17/seventeen

*opera-10.70_pre9048 (16 Sep 2010)

  16 Sep 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.70_pre9048.ebuild:
  http://my.opera.com/desktopteam/blog/2010/09/16/unix-love

*opera-10.70_pre9047 (15 Sep 2010)

  15 Sep 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.70_pre9047.ebuild:
  http://my.opera.com/desktopteam/blog/2010/09/15/hello-bookmarks-bar