@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/Attic/opera-10.63_pre6447.ebuild,v 1.1 2010/10/05 13:48:47 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/Attic/opera-10.63.ebuild,v 1.1 2010/10/12 15:49:30 jer Exp $
 
 EAPI="2"
 
@@ -16,17 +16,15 @@ IUSE="elibc_FreeBSD gtk kde +gstreamer"
 
 RESTRICT="mirror test"
 
-O_PWD="22184"
-O_V="${PV/_pre/-}"
+O_V="${PV}-6450"
 O_P="${PN}-${O_V}"
-O_HTTP="http://snapshot.opera.com/"
-O_U="${O_HTTP}unix/${O_PWD}_${O_V}/"
+O_U="mirror://opera/"
 
 SRC_URI="
-	amd64? ( ${O_U}${O_P}.x86_64.linux.tar.bz2 )
-	ppc? ( ${O_U}${O_P}.ppc.linux.tar.bz2 )
-	x86? ( ${O_U}${O_P}.i386.linux.tar.bz2 )
-	x86-fbsd? ( ${O_U}${O_P}.i386.freebsd.tar.bz2 )
+	amd64? ( ${O_U}linux/${PV/./}/${O_P}.x86_64.linux.tar.bz2 )
+	ppc? ( ${O_U}linux/${PV/./}/${O_P}.ppc.linux.tar.bz2 )
+	x86? ( ${O_U}linux/${PV/./}/${O_P}.i386.linux.tar.bz2 )
+	x86-fbsd? ( ${O_U}unix/${PV/./}/${O_P}.i386.freebsd.tar.bz2 )
 "
 
 OPREFIX="/usr/$(get_libdir)"
